@@ -31,7 +31,7 @@
 
     <div class="form-group">
         <label for="settings-extendedcrt" data-translation="extendedCRT">
-          Use Extended Combat Results Table?
+          Use Extended Combat Results Table (LW club newsletter 29)? 
         </label>
         <select class="form-control" id="settings-extendedcrt">
             <option value="yes" data-translation="Yes">Yes</option>
